remove warnings, move individual main functions to unit tests