@@ -32,8 +32,8 @@ public Object evaluate() throws com.dexels.navajo.expression.api.TMLExpressionEx
     Integer max = (Integer)operands.get(1);
     int range = max.intValue() - min.intValue();
     int result = Math.abs(r.nextInt()+1) % range;
-    return new Integer(result+min.intValue());
-//    return new Integer(range);
+    return Integer.valueOf(result+min.intValue());
+//    return Integer.valueOf(range);
   }
   @Override
 public String usage() {
@@ -42,8 +42,8 @@ public String usage() {
 public static void main(String[] args) throws Throwable {
   RandomInt r = new RandomInt();
   r.reset();
-  r.insertIntegerOperand(new Integer(2));
-  r.insertIntegerOperand(new Integer(26));
+  r.insertIntegerOperand(Integer.valueOf(2));
+  r.insertIntegerOperand(Integer.valueOf(26));
   System.err.println("Aap: "+r.evaluate());
 }
 }
